force-app/main/default/objects/Leave_Entitlements__c/Leave_Entitlements__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Leave Entitlements</label>
</CustomObject>