force-app/main/default/objects/Leave_Entitlements__c/fields/Bereavement_Leave__c.field-meta.xml
<CustomField>
    <fullName>Bereavement_Leave__c</fullName>
    <label>Bereavement Leave  (Hours)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>