force-app/main/default/objects/Leave_Entitlements__c/fields/Volunteer_Leave__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Leave__c</fullName>
    <label>Volunteer Leave  (Hours)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>