force-app/main/default/objects/Leave_Entitlements__c/fields/Work_From_Anywhere__c.field-meta.xml
<CustomField>
    <fullName>Work_From_Anywhere__c</fullName>
    <label>Work From Anywhere (Days)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>